# Altron

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  ruff.toml
backend/archive/: main.py
backend/archive/src/: data_models.py  providers.py
backend/src/: comm_tunnel.py  common.py  config.py  data_models.py  main.py  providers.py
backend/src/api/: chat.py  converse_api.py  endpoints.py  models.py  providers_api.py
backend/src/models/: __init__.py  ai_models.py  messages.py  provider.py  schemas.py
backend/src/providers/: __init__.py  lmstudio.py  openai.py
backend/src/services/: chat_service.py  converse_service.py  lmstudio.py  model_service.py  openai.py  provider_service.py
backend/src/utils/: __init__.py  environment.py  logger.py  requests.py
backend/tests/: conftest.py  statics.py  test_endpoints.py  test_logger.py  test_providers.py
backend/tests/api/: test_converse_api.py  test_endpoints.py  test_models.py  test_providers_api.py
backend/tests/models/: test_messages.py
backend/tests/providers/: test_lmstudio.py  test_openai.py
backend/tests/services/: test_converse_service.py  test_lmstudio.py  test_model_service.py  test_openai.py
backend/tests/utils/: test_environment.py  test_logger.py
database/: README.md
desktop/: README.md
frontend/: .eslint.json  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  style.css
frontend/src/app/: page.tsx
frontend/src/components/: ChatInput.tsx  HealthIndicator.tsx  HealthMonitor.tsx  MessageBubble.tsx  MessageThreadContainer.tsx  PlaceHolder.tsx  TypingIndicator.tsx  UserInputContainer.tsx
frontend/src/logic/: Models.ts  converse.ts
frontend/src/services/: health_check.ts
frontend/src/styles/: App.css  MessageThreadContainer.css  PlaceHolder.css  UserInputContainer.css  input_container.css
frontend/src/ts/: connection_indicator.ts  constants.ts  model_selector.ts
frontend/src/types/: Messages.ts  Models.ts  health.ts
frontend/src/utils/: Dom.ts
